# cuFoam

./: LICENSE  README.md
Make/: files  options
cuFoamBiCG/: cuFoamBiCG.C  cuFoamBiCG.H
cuFoamCG/: cuFoamCG.C  cuFoamCG.H
cuFoamJMR/: cuFoamJMR.C  cuFoamJMR.H
cuFoamJacobi/: cuFoamJacobi.C  cuFoamJacobi.H
cuFoamMR/: cuFoamMR.C  cuFoamMR.H
cuFoamMRJacobi/: cuFoamMRJacobi.C  cuFoamMRJacobi.H
cuFoamMRS/: cuFoamMRS.C  cuFoamMRS.H
cuFoamRichardson/: cuFoamRichardson.C  cuFoamRichardson.H
gis/: CMakeLists.txt  gis.cu  gis.h  ldu2csr.h
gis/SparseSystem/: SolverCPU.h  SolverMultiGPU.h  SolverSingleGPU.h  SparseCPU.h  SparseMultiGPU.h  SparseSingleGPU.h  check.h  kernels.h  launch.h  support.h
